--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="quiz.css">
         <script src="quiz.js" defer></script>
     </head>
-    <body onload="haha()">
+    <body>
         <div class="heading">
             <h1>QUIZ TIME</h1>
         </div>
@@ -37,6 +37,9 @@
         </div>
         <div id="scored">
             
+        </div>
+        <div class="audio">
+            <audio src="music/strangerThings.mp3" autoplay loop>
         </div>
     </body>
 </html>
