--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <div id="scored">
             
         </div>
-        <div class="audio">
-            <audio src="music/strangerThings.mp3" autoplay loop>
-        </div>
+        <audio controls id="music">
+            <source src="music/strangerThings.mp3" type="audio/mpeg">
+        </audio>
     </body>
 </html>
