--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div id="scored">
             
         </div>
-        <audio controls id="music">
+        <audio controls id="music" loop>
             <source src="music/strangerThings.mp3" type="audio/mpeg">
         </audio>
     </body>
